--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.4.0",
+    "axios": "0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "jest": "22.1.4",
     "nodemon": "^3.0.1",
-    "puppeteer": "^20.9.0"
+    "puppeteer": "18.1.0"
   }
 }
